fixed messages overflow problem

--- a/src/styles/Messages.css
+++ b/src/styles/Messages.css
@@ -6,6 +6,8 @@
   position: absolute;
   left: 0;
   bottom: 0;
+  overflow-x: hidden;
+  overflow-y: auto;
 }
 
 .messages__message {
